page num jump err fix, cdn add for raw github link

--- a/src/app/pages/memorize/memorize.page.scss
+++ b/src/app/pages/memorize/memorize.page.scss
@@ -28,3 +28,7 @@ td {
 ion-item {
   --inner-padding-end: 0;
 }
+.import-btn-alert {
+  background: var(--ion-color-success-light);
+  border: 1px solid;
+}
